--- a/assets/style.css
+++ b/assets/style.css
@@ -4,13 +4,13 @@
     margin: 0px;
     padding: 0px;
     box-sizing: border-box;
-    font-family: "Noto Sans" sans-serif;
+    font-family: "Noto Sans" ;
 }
 body{
     background-color: #bbe39c;
 }
 .blog-section h1{
-    font-size: 45px;
+    font-size: 60px;
     text-align: center;
     color: #000000;
     margin: 50px 15px 15px 15px;
@@ -21,7 +21,8 @@ body{
     margin: auto;
 }
 .cards{
-    width: 55%;
+    width: 60%;
+ 
     display:flex ;
     justify-content: space-between;
     margin: auto;
@@ -30,9 +31,9 @@ body{
 .card{
     display: flex;
     flex-direction: column;
-    margin: 20px 15px 15px 15px;
+    margin: 25px 15px 15px 15px;
     box-shadow: 0px 0px 8px rgba ( 0, 0, 0, 0.2);
-    border-radius:15px 75px 15px 15px; 
+    border-radius:15px 85px 15px 15px; 
     overflow: hidden;
     background-color: #fff;
     transition: transform 0.2s ease;
@@ -44,7 +45,7 @@ body{
     padding:20px ;
 }
 .content h2{
-    font-size: 40px;
+    font-size: 60px;
     margin-bottom: 10px;
 }
 .content h3{
